RESOLVED FIXED44447
fast/dom/script-innerHTML-x.xhtml fails when run with the HTML5 TreeBuilder in fragment mode
https://bugs.webkit.org/show_bug.cgi?id=44447
Summary fast/dom/script-innerHTML-x.xhtml fails when run with the HTML5 TreeBuilder i...
Eric Seidel (no email)
Reported 2010-08-23 12:06:52 PDT
fast/dom/script-innerHTML-x.xhtml fails when run with the HTML5 TreeBuilder in fragment mode
Attachments
Patch (2.22 KB, patch)
2010-08-23 12:08 PDT, Eric Seidel (no email)
no flags
Patch (8.27 KB, patch)
2010-08-23 13:06 PDT, Eric Seidel (no email)
no flags
Patch (8.94 KB, patch)
2010-08-23 16:26 PDT, Eric Seidel (no email)
abarth: review+
abarth: commit-queue+
Eric Seidel (no email)
Comment 1 2010-08-23 12:08:01 PDT
Adam Barth
Comment 2 2010-08-23 12:12:43 PDT
Comment on attachment 65147 [details] Patch This is parsing work. It should be in the parser.
Eric Seidel (no email)
Comment 3 2010-08-23 13:06:46 PDT
Eric Seidel (no email)
Comment 4 2010-08-23 16:26:43 PDT
Eric Seidel (no email)
Comment 5 2010-08-23 16:27:58 PDT
Please do not r+ this patch until the Qt EWS shows green. :) Otherwise it's ready for prime-time.
Eric Seidel (no email)
Comment 6 2010-08-23 16:28:35 PDT
Restructuring the code to allow this to be in the parser ended up being a bunch of work.... But this was a Yak I've wanted to shave for a long time. The world is better as a result. :)
Adam Barth
Comment 7 2010-08-23 16:35:41 PDT
Comment on attachment 65175 [details] Patch Ok. Thanks for putting this code in the right place.
Eric Seidel (no email)
Comment 8 2010-08-23 16:44:21 PDT
Note You need to log in before you can comment on or make changes to this bug.