2010-08-23  Eric Seidel  <eric@webkit.org>

Reviewed by Adam Barth.

        fast/dom/script-innerHTML-x.xhtml fails when run with the HTML5 TreeBuilder in fragment mode
        https://bugs.webkit.org/show_bug.cgi?id=44447

        This special handling for script/style used to exist in
        setInnerHTML.  HTML5 moves this logic into the HTML and XML
        parsers instead of in setInnerHTML.

        In order to share this logic between WebKit's two XML parsers
        I had to clean up a bit of the libxml2 parser and add a
        new appendFragmentSource method.

        Covered by fast/dom/script-innerHTML-x.xhtml.

        * dom/XMLDocumentParser.cpp:
        (WebCore::XMLDocumentParser::end):
         - Now that libxml2 is calling finish() for fragments (Qt already was)
           I went through and removed this unneeded style update after fragment parsing.
        (WebCore::XMLDocumentParser::parseDocumentFragment):
         - Yay for shared code!
         - This is where I added the style/script hack moved from setInnerHTML.
        * dom/XMLDocumentParser.h:
         - Fix indent.
        * dom/XMLDocumentParserLibxml2.cpp:
         - Removed parseDocumentFragment and moved necessary libxml-specific
           logic into appendFragmentSource.
        (WebCore::XMLDocumentParser::appendFragmentSource):
        * dom/XMLDocumentParserQt.cpp:
        (WebCore::XMLDocumentParser::appendFragmentSource):

Canonical link: https://commits.webkit.org/56621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65842 268f45cc-cd09-0410-ab3c-d52691b4dbfc